--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,3 +14,15 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+
+/**** Header ***/
+
+.header {
+    width: 85%;
+    padding: 20px;
+}
+
+.imgHeader {
+    width: 100%;
+}
