--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,3 +14,85 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+
+/***Aside***/
+
+.posts {
+    width: 40%;
+}
+
+.posts h2 {
+    font-size: 1.5rem;
+    color: var(--colorSubtitulo);
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+.post {
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 25px;
+}
+
+.post img {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+    box-shadow: 2px 2px 8px 1px black;
+}
+
+.post ul li {
+    list-style: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-left: 35px;
+    color: var(--colorSubtitulo);
+}
+
+.post ul li:before {
+    content: '';
+    background-image: url(../img/check.png);
+    background-size: contain;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-right: 8px;
+}
+
+.formulario {
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.formulario h3 {
+    text-align: center;
+    font-size: 1.3rem;
+    color: var(--colorTitulo);
+    margin-bottom: 17px;
+}
+
+.formulario label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-size: 1.2rem;
+    background-image: url(../img/lines.png);
+}
+
+input {
+    width: 100%;
+    height: 30px;
+    padding-left: 15px;
+    margin-bottom: 15px;
+}
+
+input[type=submit] {
+    background-color: var(--colorTitulo);
+    height: 40px;
+    line-height: 20px;
+}
